fix coding-link overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,8 +252,8 @@ ul a {
 }
 
 .music-cell {
-  border: 5px solid rgba(255, 26, 26, 0.15);
-  border-radius: 8px;
+  /*border: 5px solid rgba(255, 26, 26, 0.15);
+  border-radius: 8px;*/
   padding: 24px;
 }
 
@@ -350,6 +350,7 @@ iframe[src*="spotify"] {
   text-decoration: none;
   font-size: 1.3rem;
   padding: 10px 30px;
+  box-sizing: border-box;
   border: 2px solid;
   border-radius: 6px;
   background: rgba(237, 64, 245, 0.15);
@@ -359,8 +360,6 @@ iframe[src*="spotify"] {
   text-shadow:
     0 0 10px rgba(237, 64, 245, 0.7),
     0 0 20px rgba(200, 100, 255, 0.8);
-  position: relative;
-  overflow: visible;
 }
 
 .coding-link:hover {
